# custls

./: Cargo.toml  LICENSE  README.md
rustls/benches/: custls_benchmarks.rs
rustls/examples/: custls_basic_usage.rs  custls_custom_hooks.rs  custls_custom_template.rs  custls_http_client.rs  hyper_custls_integration.rs
rustls/rustls/: Cargo.toml
rustls/rustls/examples/: custls_zero_overhead.rs  hyper_custls_complete.rs
rustls/rustls/proptest-regressions/custls/: state_properties.txt
rustls/rustls/src/: lib.rs
rustls/rustls/src/client/: hs.rs
rustls/rustls/src/custls/: API.md  CHECKPOINT_13_SUMMARY.md  CHECKPOINT_17_SUMMARY.md  CHECKPOINT_5_REVIEW.md  CHECKPOINT_9_REVIEW.md  DOCUMENTATION_SUMMARY.md  EXTENSION_IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  LIMITATIONS.md  QUICKSTART_CN.md  REBASE_GUIDE.md  RUN_EXTENSION_TESTS.md  RUN_TESTS.md  TASK_18_COMPLETE.md  TASK_19_SUMMARY.md  TASK_20_SUMMARY.md  TASK_7_SUMMARY.md  TEMPLATE_GUIDE.md  antifingerprint_properties.rs  browser_validation.rs  examples_tests.rs  extensions.rs  hook_properties.rs  hook_tests.rs  hooks.rs  hooks_tests.rs  orchestrator.rs  orchestrator_properties.rs  randomizer_properties.rs  randomizer_tests.rs  security.rs  security_properties.rs  state_properties.rs  templates.rs  templates_properties.rs
rustls/rustls/src/custls/hooks/: README.md
rustls/rustls/src/custls/test_data/browser_captures/chrome_130/: analysis.json  windows_clienthello.hex
rustls/rustls/src/msgs/: client_hello.rs  enums.rs  rustls_modifications_test.rs
rustls/src/client/: config.rs
rustls/src/custls/: BROWSER_CAPTURE_GUIDE.md  MIGRATION_GUIDE.md  QUICKSTART.md  README.md  REAL_SERVER_TESTING.md  RELEASE_CHECKLIST.md  TASK_10_SUMMARY.md  TASK_6_SUMMARY.md  TASK_8_SUMMARY.md  TEMPLATE_IMPLEMENTATION_SUMMARY.md  hooks_properties.rs  integration_tests.rs  mod.rs  randomizer.rs  real_server_tests.rs  state.rs  tests.rs  utils.rs
rustls/src/custls/test_data/browser_captures/: README.md
rustls/src/custls/test_data/browser_captures/edge_130/: windows_clienthello.hex
rustls/src/custls/test_data/browser_captures/firefox_135/: analysis.json
rustls/src/msgs/: mod.rs
(+4 files in other folders)
